--- a/index.css
+++ b/index.css
@@ -1,11 +1,7 @@
-﻿.done {
-    text-decoration: line-through;
-    opacity: 0.5;
-}
-.selected {
-    color: green;
-}
-
-.deselected {
-    color: black;
+﻿div {
+    width: 100px;
+    height: 100px;
+    background: teal;
+    float: left;
+    margin: 20px;
 }
